# opengl_trial

./: CMakeLists.txt  DSU.h  DataStructure.h  DelaunayTriangulation.cpp  README.md  SetPairs.h  Triangle.cpp  Triangulation.h  Vector3D.cpp  kdtree.h  main.cpp  main2.cpp  main_figure.cpp  main_nurbs.cpp  main_nurbs1.cpp  ply_loader.h
algorithms/: NurbsBuilder.h
math/: point.h
